--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" id="css-library" href="css/styleff0b.css" media="all">
-    
+    <meta name="description" content="أنا كرار، مطوّر ويب منذ عام 2022، قررت اقتحام هذا المجال لأن الحياة لم تُتح لي خياراً أفضل. أصنع مواقع تُشبهني: فوضوية أحياناً، عبقرية أحياناً، وغالباً ما تعمل.">
     <!-- OG -->
     <meta property="og:title" content="KARRAR NAZIM">
-    <meta property="og:site_name" content="KARRAR NAZIM">
-    <meta property="og:url" content="thestrokes.com">
+    <meta name="og:description" content="أنا كرار، مطوّر ويب منذ عام 2022، قررت اقتحام هذا المجال لأن الحياة لم تُتح لي خياراً أفضل. أصنع مواقع تُشبهني: فوضوية أحياناً، عبقرية أحياناً، وغالباً ما تعمل.">
+    <meta property="og:url" content="https://karrarnazim.netlify.app">
     <meta property="og:description" content="KARRAR NAZIM">
     <meta property="og:type" content="about">
     <meta property="og:image" content="assets/img/fav.jpg">
