--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                         <div class="signup-for-answers-answers">
                             <div class="scrolling-phrase-items">
                                 <span class="scrolling-phrase-slide">Who the Hell Am I?</span>
+                                <span class="scrolling-phrase-slide">idk</span>
                                 <span class="scrolling-phrase-slide">cool</span>
                                 <span class="scrolling-phrase-slide">What I Actually Do</span>
                                 <span class="scrolling-phrase-slide">My So-Called Projects</span>
