--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" id="css-library" href="css/styleff0b.css?rev=5" media="all">
+    <link rel="stylesheet" id="css-library" href="css/styleff0b.css?rev=6" media="all">
     <meta name="description" content="أنا كرار، مطوّر ويب منذ عام 2022، قررت اقتحام هذا المجال لأن الحياة لم تُتح لي خياراً أفضل. أصنع مواقع تُشبهني: فوضوية أحياناً، عبقرية أحياناً، وغالباً ما تعمل.">
     <!-- OG -->
     <meta property="og:title" content="KARRAR NAZIM">
@@ -409,9 +409,11 @@
                     <div class="social">
                         <a href="https://schoolcard.netlify.app" target="_blank" rel="noopener">
                             school card generator
+                            <img src="/assets/img/icons/schoologo.svg" alt="schoolcard logo">
                         </a>
                         <a href="https://animeslayer.rf.gd" target="_blank" rel="noopener">
-                            manga slayer
+                            manga slayer app
+                            <img src="/assets/img/icons/mangalogo.svg" alt="">
                         </a>
                         
                     </div>
