--- a/index.html
+++ b/index.html
@@ -404,16 +404,19 @@
                 </h2>
                 <div class="social-container">
                     <div class="social-header">
-                        websites
+                        Websites
                     </div>
                     <div class="social">
                         <a href="https://schoolcard.netlify.app" target="_blank" rel="noopener">
-                            school card generator
-                            <img src="/assets/img/icons/schoologo.svg" alt="schoolcard logo">
+                            School Card Generator
+
                         </a>
                         <a href="https://animeslayer.rf.gd" target="_blank" rel="noopener">
-                            manga slayer app
-                            <img src="/assets/img/icons/mangalogo.svg" alt="">
+                            Manga Slayer app
+
+                        </a>
+                                                <a href="https://animeslayer.rf.gd" target="_blank" rel="noopener">
+                            Titan Store UI
                         </a>
                         
                     </div>
