--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                             Manga Slayer app
 
                         </a>
-                                                <a href="https://animeslayer.rf.gd" target="_blank" rel="noopener">
+                                                <a href="https://titansstore.netlify.app" target="_blank" rel="noopener">
                             Titan Store UI
                         </a>
                         
