--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" id="css-library" href="css/styleff0b.css?rev=6" media="all">
+    <link rel="stylesheet" id="css-library" href="css/styleff0b.css?rev=7" media="all">
     <meta name="description" content="أنا كرار، مطوّر ويب منذ عام 2022، قررت اقتحام هذا المجال لأن الحياة لم تُتح لي خياراً أفضل. أصنع مواقع تُشبهني: فوضوية أحياناً، عبقرية أحياناً، وغالباً ما تعمل.">
     <!-- OG -->
     <meta property="og:title" content="KARRAR NAZIM">
@@ -115,7 +115,7 @@
             <div class="title-bar drag-handle">
                 <div class="title">
                     <a href="" rel="noopener" class="btn btn-basic btn-search-icon" title="KARRAR NAZIM"></a>
-                    <h2>KARRAR NAZIM / ©</h2>
+                    <h2>KARRARNAZIM/copyright</h2>
                 </div>
                 <span class="btn btn-close" title="Close">
                     <a href="#">X</a>
@@ -143,7 +143,7 @@
             <div class="title-bar drag-handle">
                 <div class="title">
                     <a href="" rel="noopener" class="btn btn-basic btn-search-icon" title="KARRAR NAZIM"></a>
-                    <h2>KARRAR NAZIM / ©</h2>
+                    <h2>KARRARNAZIM/About</h2>
                 </div>
                 <button class="btn btn-toggle-mobile-menu">
                     <span class="sr-only">
@@ -288,7 +288,7 @@
             <div class="title-bar drag-handle">
                 <div class="title">
                     <a rel="noopener" class="btn btn-basic btn-search-icon" title="KARRAR NAZIM"></a>
-                    <h2>KARRAR NAZIM / ©</h2>
+                    <h2>KARRARNAZIM/Music</h2>
                 </div>
                 <button class="btn btn-toggle-mobile-menu">
                     <span class="sr-only">
@@ -366,7 +366,7 @@
             <div class="title-bar drag-handle">
                 <div class="title">
                     <a rel="noopener" class="btn btn-basic btn-search-icon" title="KARRAR NAZIM"></a>
-                    <h2>KARRAR NAZIM / ©</h2>
+                    <h2>KARRARNAZIM/My_Projects</h2>
                 </div>
                 <button class="btn btn-toggle-mobile-menu">
                     <span class="sr-only">
@@ -440,7 +440,7 @@
             <div class="title-bar drag-handle">
                 <div class="title">
                     <a rel="noopener" class="btn btn-basic btn-search-icon" title="KARRAR NAZIM"></a>
-                    <h2>KARRAR NAZIM / ©</h2>
+                    <h2>KARRARNAZIM/Screensaver</h2>
                 </div>
                 <span class="btn btn-close" title="Close">
                     <a href="#">X</a>
