--- a/index.html
+++ b/index.html
@@ -565,9 +565,9 @@
         
         document.addEventListener("visibilitychange", function() {
             if (document.hidden) {
-                changeFavicon("https://cdn.jsdelivr.net/gh/SANDRO00O/hunter@main/close.png");
+                changeFavicon("https://cdn.jsdelivr.net/gh/SANDRO00O/hunter@main/fav.png");
             } else {
-                changeFavicon(originalFavicon || "https://cdn.jsdelivr.net/gh/SANDRO00O/hunter@main/fav.png");
+                changeFavicon(originalFavicon || "https://cdn.jsdelivr.net/gh/SANDRO00O/hunter@main/close.png");
             }
         });
     </script>
