--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <span>Screensaver</span>
                 </a>
             </nav>
-            <h2 id="changing-text" class="font-loop">Welcome, unfortunately</h2>
+            <h2 id="changing-text" class="font-loop">Hi, I'm Karrar</h2>
             
         </div>
         
