--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Fontawesome -->
     <script src="../kit.fontawesome.com/f55a23c83c.html" crossorigin="anonymous"></script>
     <link rel="stylesheet" id="css-library" href="css/styleff0b.css?rev=12" media="all">
-
+    
 </head>
 
 <body>
@@ -43,6 +43,7 @@
   text-align: left;
   font-size: 1rem;
   line-height: 1.3rem;
+  display: none;
 ">
         <div id="chaos-text">waking up the website...</div>
     </div>
@@ -720,40 +721,44 @@
             }
         });
     </script>
-        <script>
+    <script>
         // بيانات الأغاني
         const songs = [
-            {
-                title: "You And Whose Army?",
-                artist: "Radiohead",
-                src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/You-And-Whose-Army.mp3"
-            },
-            {
-                title: "The Kids from Yesterday",
-                artist: "My Chemical Romance",
-                src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/The-Kids-from-Yesterday.mp3"
-            },
-            {
-                title: "Lift",
-                artist: "Radiohead",
-                src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Lift.mp3"
-            },
-            {
-                title: "Early Sunsets Over Monroeville",
-                artist: "My Chemical Romance",
-                src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Early-Sunsets-Over-Monroeville.mp3"
-            },
-            {
-                title: "Demolition Lovers",
-                artist: "My Chemical Romance",
-                src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Demolition-Lovers.mp3"
-            },
-            {
-                title: "Dead!",
-                artist: "My Chemical Romance",
-                src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Dead!.mp3"
-            }
-        ];
+        {
+            title: "You And Whose Army?",
+            artist: "Radiohead",
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/You-And-Whose-Army.mp3"
+        },
+        {
+            title: "The Kids from Yesterday",
+            artist: "My Chemical Romance",
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/The-Kids-from-Yesterday.mp3"
+        },
+        {
+            title: "The Kids from Yesterday",
+            artist: "My Chemical Romance",
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/The-Kids-from-Yesterday.mp3"
+        },
+        {
+            title: "Lift",
+            artist: "Radiohead",
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Lift.mp3"
+        },
+        {
+            title: "Early Sunsets Over Monroeville",
+            artist: "My Chemical Romance",
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Early-Sunsets-Over-Monroeville.mp3"
+        },
+        {
+            title: "Demolition Lovers",
+            artist: "My Chemical Romance",
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Demolition-Lovers.mp3"
+        },
+        {
+            title: "Dead!",
+            artist: "My Chemical Romance",
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Dead!.mp3"
+        }];
         
         // عناصر DOM
         const audio = new Audio();
