--- a/index.html
+++ b/index.html
@@ -735,9 +735,9 @@
             src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/The-Kids-from-Yesterday.mp3"
         },
         {
-            title: "The Kids from Yesterday",
-            artist: "My Chemical Romance",
-            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/The-Kids-from-Yesterday.mp3"
+            title: "Street Spirit (Fade Out)",
+            artist: "Radiohead",
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Street-Spirit-(Fade-Out).flac"
         },
         {
             title: "Lift",
