--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
         {
             title: "Street Spirit (Fade Out)",
             artist: "Radiohead",
-            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Street-Spirit-(Fade-Out).flac"
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Street-Spirit-(Fade-Out).mp3"
         },
         {
             title: "Lift",
