--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
   text-align: left;
   font-size: 1rem;
   line-height: 1.3rem;
-  display: none;
 ">
         <div id="chaos-text">waking up the website...</div>
     </div>
@@ -739,6 +738,11 @@
             artist: "Radiohead",
             src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Street-Spirit-(Fade-Out).mp3"
         },
+        {
+    title: "Vampires Will Never Hurt You",
+    artist: "My Chemical Romance",
+    src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Vampires-Will-Never-Hurt-You.mp3"
+},
         {
             title: "Lift",
             artist: "Radiohead",
