--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
         
         // عناصر DOM
         const audio = new Audio();
-        audio.preload = "none"; // ✅ هذا هو السطر المهم
+        audio.preload = "none";
         const playBtn = document.getElementById('playBtn');
         const prevBtn = document.getElementById('prevBtn');
         const nextBtn = document.getElementById('nextBtn');
