--- a/h.html
+++ b/h.html
@@ -1,139 +1,9 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>محاكاة تحميل نظام يونكس</title>
-    <style>
-        body {
-            background-color: #000;
-            color: #0f0;
-            font-family: 'Courier New', monospace;
-            margin: 0;
-            padding: 20px;
-            overflow: hidden;
-        }
-        #loading_unix {
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-        #loading_unix_content {
-            flex-grow: 1;
-            overflow-y: auto;
-            white-space: pre-wrap;
-            line-height: 1.3;
-            padding: 10px;
-        }
-        .hidden {
-            display: none !important;
-        }
-        /* شريط التمرير */
-        #loading_unix_content::-webkit-scrollbar {
-            width: 8px;
-        }
-        #loading_unix_content::-webkit-scrollbar-track {
-            background: #000;
-        }
-        #loading_unix_content::-webkit-scrollbar-thumb {
-            background: #0f0;
-        }
-    </style>
-</head>
-<body>
-    <div id="loading_unix">
-        <div id="loading_unix_content"></div>
-    </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        function unixLoading() {  
-            const lines = [    
-                "RGLINUX 2.3.15 2018-10-01 ETCD Copyright",    
-                "(C) 1986-2020 RG Inc. & Zeis Industries",    
-                "boot:",  
-                "[??1.6148569] 18042: No controller found",  
-                "?OpenBarager 0.15.1.88bc7e0 is",  
-                "starting up RG Linux 2.3.15-1-grsec (x86 64)",  
-                "CPU: LCARv7 Processor (412fc09a] revision 10 (LCARv7),",  
-                "er=10c53c7d",  
-                "CPU: PIPT / VIPT nonaliasing data cache,",  
-                "VIP aliasing instruction cache",  
-                "Machine: Redscale i.MX12 Octo/Heptabite",  
-                "Device Tree)",  
-                "model: QuantumRun 2-Box-i Dd",  
-                "Truncating RAM at 10000000-8fffffff to",  
-                "-Terriff (unalloc region overlap)",  
-                "cma: CMA: reserved 512 Miß at 6e000000",  
-                "Memory policy: ECC disabled, Data cache writealloc",  
-                "PERCPU: Embedded 8 pages/cpu 081701000 s8576 r8192 dl6000 u32768",  
-                "Built 1 zonelists in Zone order, mobility grouping",  
-                "Total pages: 453136",  
-                "Kernel command line: console=ttymxc0,115200 root=/dev/mmoblk0p2 rootfstype=ext43",  
-                "PID hash table entries: 8096 (order:8, 16384 bytes)",  
-                "devtmpfs: mounted",  
-                "Freeing unused kernel memory: 264K (807£2000 - 80834000)",  
-                "* /proc is already mounted",  
-                "Mounting",  
-                "/run?????",  
-                "/run/openbarager: creating directory",  
-                "* /run/lock: creating directory",  
-                "* /run/lock: correcting owner",  
-                "* Caching service dependencies???.",  
-                "* Remounting devtmpfs on/dev???",  
-                "* Mounting /dev/maucue????",  
-                "* Updating nominal transmission???...??????3333 [ ok ]",  
-                "* Caching active DM quads???.??22?2222?/ [ ok ]",  
-                "* Starting tandem buffers???...??????????/ [ ok ]",  
-                "* Compiling target paths???...??2?22?222/ [ ok ]",  
-                "* Calibrating delay loop???..??2223???1/ [ ok ]",  
-                "* Created slice System Slice???, 832?323?23/ [ ok ]",  
-                "* Mounting Debug File System??? 23293939997 [ ok ]",  
-                "* Checking local filesystems??? 3222222?22 / [ ok ]",  
-                "* Mounting filesystems???? .?2?2222?322 / [ ok ]",  
-                "Configuring kernel parameters??? ???2733227[ ok ]",  
-                "Creating user login records???..?????",  
-                "",  
-                "",  
-                "",  
-                "* Mounting Debug Pile System?????????2??? [ ok ]",  
-                "Checking local filesystems???..?????22??? [ ok ]",  
-                "* Mounting filesystems????.",  
-                ".??????????3[ ok ]",  
-                "* Configuring kernel parameters???...??????????[ ok ]",  
-                "* Creating user login records???...?????2?2?[ ok ]",  
-                "Starting busybox syslog???",  
-                "222333328 I ok 1",  
-                "Welcome to RG Linux 2.3",  
-                "Kernel 3.18.20-1-grsec on an x86 64 (/dev/ttyl)",  
-                "localhost login: E E",  
-            ];  
-
-            const output = document.getElementById("loading_unix_content");  
-
-            for (let i = 0; i < lines.length; i++) {  
-                const line = lines[i];  
-
-                for (let j = 0; j < line.length; j++) {  
-                    setTimeout(() => {  
-                        output.innerHTML += line[j];  
-                        output.scrollTop = output.scrollHeight;  
-                        if (j == lines.length - 1) {  
-                            $('#loading_unix').addClass('hidden');  
-                        }  
-                    }, 80 * j);  
-                }  
-
-                setTimeout(() => {  
-                    output.innerHTML += "\n";  
-                }, 80 * line.length);  
-            }  
-        }  
-
-        $(document).ready(function() {
-            unixLoading();
-        });
-    </script>
-</body>
-</html>
+  <iframe
+    src="https://pl.buzkora.online/albaplayer/bein22/?serv=0"
+    width="100%"
+    height="100%"
+    frameborder="0"
+    allowfullscreen
+    scrolling="yes"
+  ></iframe>
