--- a/h.html
+++ b/h.html
@@ -1,9 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+  <meta charset="UTF-8">
+  <title>البث المباشر</title>
+  <style>body, html { margin: 0; padding: 0; height: 100%; }</style>
+</head>
+<body>
   <iframe
-    src="https://pl.buzkora.online/albaplayer/bein22/?serv=0"
+    src="https://pl.buzkora.online/albaplayer/bein22"
     width="100%"
     height="100%"
     frameborder="0"
     allowfullscreen
     scrolling="yes"
   ></iframe>
+</body>
+</html>
