--- a/index.html
+++ b/index.html
@@ -673,6 +673,12 @@
                         <a href="https://titansstore.netlify.app" target="_blank" rel="noopener">
                             Titan Store UI
                         </a>
+                                                <a href="https://sandro00o.github.io/Hex-and-ASCII-Viewer/" target="_blank" rel="noopener">
+                            Enhanced Hex and ASCII Viewer
+                        </a>
+                                                <a href="https://sandro00o.github.io/Time-capsule/" target="_blank" rel="noopener">
+                            Time capsule
+                        </a>
                         
                     </div>
                 </div>
