--- a/index.html
+++ b/index.html
@@ -917,42 +917,42 @@
         {
             title: "You And Whose Army?",
             artist: "Radiohead",
-            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/You-And-Whose-Army.mp3"
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/You-And-Whose-Army.opus"
         },
         {
             title: "The Kids from Yesterday",
             artist: "My Chemical Romance",
-            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/The-Kids-from-Yesterday.mp3"
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/The-Kids-from-Yesterday.opus"
         },
         {
             title: "Street Spirit (Fade Out)",
             artist: "Radiohead",
-            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Street-Spirit-(Fade-Out).mp3"
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Street-Spirit-Fade-Out.opus"
         },
         {
             title: "Vampires Will Never Hurt You",
             artist: "My Chemical Romance",
-            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Vampires-Will-Never-Hurt-You.mp3"
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Vampires-Will-Never-Hurt-You.opus"
         },
         {
             title: "Lift",
             artist: "Radiohead",
-            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Lift.mp3"
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Lift.opus"
         },
         {
             title: "Early Sunsets Over Monroeville",
             artist: "My Chemical Romance",
-            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Early-Sunsets-Over-Monroeville.mp3"
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Early-Sunsets-Over-Monroeville.opus"
         },
         {
             title: "Demolition Lovers",
             artist: "My Chemical Romance",
-            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Demolition-Lovers.mp3"
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Demolition-Lovers.opus"
         },
         {
             title: "Dead!",
             artist: "My Chemical Romance",
-            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Dead!.mp3"
+            src: "https://cdn.jsdelivr.net/gh/SANDRO00O/karrarnazim@main/assets/music/Dead.opus"
         }];
         
         // عناصر DOM
